It is not a frame.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-你好世界
-Hello world!
-Hallo Welt!
-Hallo wereld!
+ <!DOCTYPE html>
+  <meta charset="UTF-8"> 
+<html>
+<head>
+<title>Shadowswords Bw</title>
+</head>
+<body>
+
+<h1>Shadowsword.</h1>
+<h2>Warum Shadowsword? </h2>
+<p>Die direkte englische Übersetzung von der chinesischen Zeichen &#132;影&#147; und &#132;剑&#147;.</p>
+<p>Was die Aussprache meines Namen entspricht.</p>
+
+<h2>Was soll in die nahe Zukunft diese Seite enthalten?</h2>
+<p>&Ouml;ffentlicher Verkehr in der Realit&auml;t und in der Virtualit&auml;t.</p>
+
+</body>
+</html>
