Simple Framework following the Tutorial

--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 ---
+layout: default
 title: Shadowswords Bw
 ---
-
- <!DOCTYPE html>
-  <meta charset="UTF-8"> 
-<html>
-<head>
-<title>{{page.title}}</title>
-</head>
-<body>
 
 <h1>Shadowsword.</h1>
 <h2>Warum Shadowsword?</h2>
@@ -17,6 +10,3 @@ title: Shadowswords Bw
 
 <h2>Was soll in die nahe Zukunft diese Seite enthalten?</h2>
 <p>&Ouml;ffentlicher Verkehr in der Realit&auml;t und in der Virtualit&auml;t.</p>
-
-</body>
-</html>
