--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@ title: Shadowswords Bw
 ---
 
 <h1>Shadowsword.</h1>
-<h2>Warum Shadowsword?</h2>
-<p>Die direkte englische Übersetzung von der chinesischen Zeichen &#132;影&#147; und &#132;剑&#147;.</p>
-<p>Was die Aussprache meines Namen entspricht.</p>
 
-<h2>Was soll in die nahe Zukunft diese Seite enthalten?</h2>
-<p>&Ouml;ffentlicher Verkehr in der Realit&auml;t und in der Virtualit&auml;t.</p>
+
+<iframe height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/89385139/latest-rides/0d3d537fdb89c8cd6becd58a44a9799ef37aeaba'></iframe>
